--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 table {
   border-collapse: collapse;
-  width: auto;
+  width: 100%;
 }
 
 table td,
@@ -26,7 +26,7 @@ table th {
 }
 .grid-container {
   display: grid;
-  grid-template-columns: auto auto;
+  grid-template-columns: 60% auto;
   padding: 10px;
 }
 .grid-container > div {
