--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ table th {
   padding: 10px;
 }
 .grid-container > div {
-  background-color: rgba(255, 255, 255, 0.8);
+  
   padding: 10px;
   
 }
@@ -42,7 +42,6 @@ table th {
 }
 .grid-item {
   padding: 10px;
-  border: 1px solid rgba(0, 0, 0, 0.8);
 }
 * {
   box-sizing: border-box;
@@ -224,7 +223,14 @@ img {vertical-align: middle;}
 .active {
   background-color: #717171;
 }
-
+.button1{background-color: #04AA6D;
+  padding: 7px;
+  margin: 8px;
+  border-radius: 12px;}
+  .button2{ border-radius:10px;
+  background-color: #04AA6D;
+  padding: 7px;
+  margin: 2px;}
 /* Fading animation */
 .fade {
   -webkit-animation-name: fade;
@@ -247,3 +253,62 @@ img {vertical-align: middle;}
 @media only screen and (max-width: 300px) {
   .text {font-size: 11px}
 }
+
+.grid-buy {
+  display: grid;
+  grid-template-columns: auto auto;
+  
+}
+.grid-line {
+  padding: auto;
+}
+
+.center {
+  margin: auto;
+  width: 60%;
+  padding: 10px;
+  }
+
+  .card {
+      box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+      transition: 0.3s;
+  }
+  .cardi {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+}
+  .card-content {
+      padding: 0.5cm;
+  }
+
+  .card-header {
+      font-size: 1fr;
+      font-weight: 100;
+      color: #0d0d0d;
+      margin-bottom: 0.5cm;
+  }
+
+  .topnav {
+  overflow: hidden;
+  background-color: #333;
+  }
+
+  .topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+  }
+
+  .topnav a:hover {
+  background-color: #ddd;
+  color: black;
+  }
+
+  .invoice{
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: x-large;
+  }
+  
