--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ table th {
   padding-top: 12px;
   padding-bottom: 12px;
   text-align: left;
-  background-color: #4caf50;
+  background-color: #4CAF50;
   color: white;
 }
 .grid-container {
@@ -30,13 +30,15 @@ table th {
   padding: 10px;
 }
 .grid-container > div {
+  
   padding: 10px;
+  
 }
 .itemk {
-  grid-column: 1 / span 2;
+  grid-column: 1/ span 2;
 }
-.itemh {
-  grid-column: 0.5 / span 2;
+.itemh{
+  grid-column: 0.5/ span 2;
 }
 .grid-item {
   padding: 10px;
@@ -85,7 +87,7 @@ body {
 
 /* Create two unequal columns that floats next to each other */
 /* Left column */
-.leftcolumn {
+.leftcolumn {   
   float: left;
   width: 60%;
 }
@@ -112,6 +114,7 @@ body {
   margin-top: 20px;
 }
 
+
 /* Clear floats after the columns */
 .row:after {
   content: "";
@@ -129,8 +132,7 @@ body {
 
 /* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 800px) {
-  .leftcolumn,
-  .rightcolumn {
+  .leftcolumn, .rightcolumn {   
     width: 100%;
     padding: 0;
   }
@@ -143,10 +145,10 @@ body {
     width: 100%;
   }
 }
-.box1 {
-  width: 200px;
-  height: 25px;
-  border: solid 1px black;
+ .box1 {
+    width: 200px;
+    height: 25px;
+    border: solid 1px black;
 }
 body {
   margin: 0;
@@ -173,21 +175,13 @@ body {
 }
 
 .topnav a.active {
-  background-color: #04aa6d;
+  background-color: #04AA6D;
   color: white;
 }
-* {
-  box-sizing: border-box;
-}
-body {
-  font-family: Verdana, sans-serif;
-}
-.mySlides {
-  display: none;
-}
-img {
-  vertical-align: middle;
-}
+* {box-sizing: border-box;}
+body {font-family: Verdana, sans-serif;}
+.mySlides {display: none;}
+img {vertical-align: middle;}
 
 /* Slideshow container */
 .slideshow-container {
@@ -230,18 +224,14 @@ img {
 .active {
   background-color: #717171;
 }
-.button1 {
-  background-color: #04aa6d;
+.button1{background-color: #04AA6D;
   padding: 7px;
   margin: 8px;
-  border-radius: 12px;
-}
-.button2 {
-  border-radius: 10px;
-  background-color: #04aa6d;
+  border-radius: 12px;}
+  .button2{ border-radius:10px;
+  background-color: #04AA6D;
   padding: 7px;
-  margin: 2px;
-}
+  margin: 2px;}
 /* Fading animation */
 .fade {
   -webkit-animation-name: fade;
@@ -251,33 +241,24 @@ img {
 }
 
 @-webkit-keyframes fade {
-  from {
-    opacity: 0.4;
-  }
-  to {
-    opacity: 1;
-  }
+  from {opacity: .4} 
+  to {opacity: 1}
 }
 
 @keyframes fade {
-  from {
-    opacity: 0.4;
-  }
-  to {
-    opacity: 1;
-  }
+  from {opacity: .4} 
+  to {opacity: 1}
 }
 
 /* On smaller screens, decrease text size */
 @media only screen and (max-width: 300px) {
-  .text {
-    font-size: 11px;
-  }
+  .text {font-size: 11px}
 }
 
 .grid-buy {
   display: grid;
   grid-template-columns: auto auto;
+  
 }
 .grid-line {
   padding: auto;
@@ -287,47 +268,48 @@ img {
   margin: auto;
   width: 60%;
   padding: 10px;
-}
+  }
 
-.card {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  transition: 0.3s;
+  .card {
+      box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+      transition: 0.3s;
+  }
+  .cardi {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
 }
-.cardi {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  transition: 0.3s;
-}
-.card-content {
-  padding: 0.5cm;
-}
+  .card-content {
+      padding: 0.5cm;
+  }
 
-.card-header {
-  font-size: 1fr;
-  font-weight: 100;
-  color: #0d0d0d;
-  margin-bottom: 0.5cm;
-}
+  .card-header {
+      font-size: 1fr;
+      font-weight: 100;
+      color: #0d0d0d;
+      margin-bottom: 0.5cm;
+  }
 
-.topnav {
+  .topnav {
   overflow: hidden;
   background-color: #333;
-}
+  }
 
-.topnav a {
+  .topnav a {
   float: left;
   color: #f2f2f2;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
   font-size: 17px;
-}
+  }
 
-.topnav a:hover {
+  .topnav a:hover {
   background-color: #ddd;
   color: black;
-}
+  }
 
-.invoice {
-  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
-  font-size: x-large;
-}
+  .invoice{
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: x-large;
+  }
+  
