--- a/styles.css
+++ b/styles.css
@@ -2,10 +2,32 @@ a {
   text-decoration: none;
 }
 body {
-  background-image: url("mooo.jpg");
+  background-image: url("po.jpg");
+  background-color: black;
   /* background: -webkit-linear-gradient(bottom, black); */
   /* background-repeat: no-repeat; */
   /* background-size: cover; */
+}
+.landing {
+  float: none;
+  margin-left: 100px;
+  padding: 0px 38px;
+  font-family: "Raleway", sans-serif;
+  font-size: 50px;
+  font-weight: bold;
+  color: white;
+  line-height: 20px;
+  position: absolute;
+  top: 40%;
+  left: 30%;
+  transform: translate(-50%, -50%);
+}
+.landing span {
+  color: #f1c40f;
+}
+img {
+  border-radius: 50%;
+  /* margin-left: 20%; */
 }
 label {
   font-family: "Raleway", sans-serif;
@@ -19,12 +41,14 @@ label {
   text-align: bottom;
 }
 #card {
+  float: none;
   background: #f1c40f;
   border-radius: 8px;
   box-shadow: 1px 2px 8px rgba(0, 0, 0, 0.65);
   height: 470px;
-  margin: 6rem auto 8.1rem auto;
+  margin: 10rem auto 8.1rem auto;
   width: 329px;
+  margin-left: 60%;
 }
 #card-content {
   padding: 12px 44px;
@@ -71,10 +95,11 @@ label {
   background: -webkit-linear-gradient(right, #9b59b6, #34495e);
 }
 .form-content {
-  background: rebeccapurple;
+  background: white;
   border: none;
   outline: none;
   padding-top: 14px;
+  border-radius: 1%;
 }
 .underline-title {
   background: -webkit-linear-gradient(right, #9b59b6, #34495e);
