--- a/w3_real.css
+++ b/w3_real.css
@@ -1,209 +1,224 @@
-button,input,select,textarea {
-    font: inherit;
-    margin: 0;
+button,
+input,
+select,
+textarea {
+  font: inherit;
+  margin: 0;
+}
+optgroup {
+  font-weight: bold;
+}
+html,
+body {
+  font-family: Verdana, sans-serif;
+  font-size: 20px;
+  line-height: 2;
+}
+html {
+  overflow-x: hidden;
+}
+.w3-sidebar {
+  height: 100%;
+  width: 200px;
+  background-color: #fff;
+  position: fixed !important;
+  z-index: 1;
+  overflow: auto;
+}
+@media (min-width: 993px) {
+  .w3-modal-content {
+    width: 900px;
   }
-  optgroup {
-    font-weight: bold;
-  }
-  html,body {
-    font-family: Verdana, sans-serif;
-    font-size: 20px;
-    line-height: 2;
-  }
-  html {
-    overflow-x: hidden;
-  }
-  .w3-sidebar {
-    height: 100%;
-    width: 200px;
-    background-color: #fff;
-    position: fixed !important;
-    z-index: 1;
-    overflow: auto;
-  }
-  @media (min-width: 993px) {
-    .w3-modal-content {
-      width: 900px;
-    }
-    .w3-hide-large {
-      display: none !important;
-    }
-    .w3-sidebar.w3-collapse {
-      display: block !important;
-    }
-  }
-  @media (max-width: 992px) {
-    .w3-sidebar.w3-collapse {
-      display: none;
-    }
-    .w3-main {
-      margin-left: 0 !important;
-      margin-right: 0 !important;
-    }
-  }
-  .w3-bar-block .w3-dropdown-hover,
-  .w3-bar-block .w3-dropdown-click {
-    width: 100%;
-  }
-  .w3-bar-block .w3-dropdown-hover .w3-dropdown-content,
-  .w3-bar-block .w3-dropdown-click .w3-dropdown-content {
-    min-width: 100%;
-  }
-  .w3-bar-block .w3-dropdown-hover .w3-button,
-  .w3-bar-block .w3-dropdown-click .w3-button {
-    width: 100%;
-    text-align: left;
-    padding: 8px 16px;
-  }
-  .w3-bar-block .w3-bar-item {
-    width: 100%;
-    display: block;
-    padding: 8px 16px;
-    text-align: left;
-    border: none;
-    white-space: normal;
-    float: none;
-    outline: 0;
-  }
-  .w3-bar-block.w3-center .w3-bar-item {
-    text-align: center;
-  }
-  .w3-block {
-    display: block;
-    width: 100%;
-  }
-  .w3-border-left {
-    border-left: 1px solid #ccc !important;
-  }
-  .w3-border-right {
-    border-right: 1px solid #ccc !important;
-  }
-  .w3-bar .w3-bar-item {
-    padding: 8px 16px;
-    float: left;
-    width: auto;
-    border: none;
-    display: block;
-    outline: 0;
-  }
-  .w3-bar-block .w3-bar-item {
-    width: 100%;
-    display: block;
-    padding: 8px 16px;
-    text-align: left;
-    border: none;
-    white-space: normal;
-    float: none;
-    outline: 0;
-  }
-  .w3-bar-block.w3-center .w3-bar-item {
-    text-align: center;
-  }
-  .w3-block {
-    display: block;
-    width: 100%;
-  }
-  .w3-hide-small {
+  .w3-hide-large {
     display: none !important;
   }
-  .w3-mobile {
-    display: block;
-    width: 100% !important;
+  .w3-sidebar.w3-collapse {
+    display: block !important;
   }
-  .w3-bar-item.w3-mobile,
-  .w3-dropdown-hover.w3-mobile,
-  .w3-dropdown-click.w3-mobile {
-    text-align: center;
+}
+@media (max-width: 992px) {
+  .w3-sidebar.w3-collapse {
+    display: none;
   }
-  .w3-tiny {
-    font-size: 10px !important;
+  .w3-main {
+    margin-left: 0 !important;
+    margin-right: 0 !important;
   }
-  .w3-small {
-    font-size: 12px !important;
-  }
-  .w3-medium {
-    font-size: 15px !important;
-  }
-  .w3-large {
-    font-size: 18px !important;
-  }
-  .w3-btn,
-  .w3-button {
-    border: none;
-    display: inline-block;
-    padding: 8px 16px;
-    vertical-align: middle;
-    overflow: hidden;
-    text-decoration: none;
-    color: inherit;
-    background-color: inherit;
-    text-align: center;
-    cursor: pointer;
-    white-space: nowrap;
-  }
-  .w3-btn,
-  .w3-button {
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-  }
-  .w3-disabled,
-  .w3-btn:disabled,
-  .w3-button:disabled {
-    cursor: not-allowed;
-    opacity: 0.3;
-  }
-  .w3-disabled *,
-  :disabled * {
-    pointer-events: none;
-  }
-  .w3-dropdown-hover:hover > .w3-button:first-child,
-  .w3-dropdown-click:hover > .w3-button:first-child {
-    background-color: #ccc;
-    color: #000;
-  }
-  .w3-bar-block .w3-dropdown-hover .w3-button,
-  .w3-bar-block .w3-dropdown-click .w3-button {
-    width: 100%;
-    text-align: left;
-    padding: 8px 16px;
-  }
-  .w3-bar .w3-button {
-    white-space: normal;
-  }
-  .w3-dropdown-hover.w3-mobile,
-  .w3-dropdown-hover.w3-mobile .w3-btn,
-  .w3-dropdown-hover.w3-mobile .w3-button,
-  .w3-dropdown-click.w3-mobile,
-  .w3-dropdown-click.w3-mobile .w3-btn,
-  .w3-dropdown-click.w3-mobile .w3-button {
-    width: 100%;
-  }
-  .w3-button:hover {
-    color: #000 !important;
-    background-color: #ccc !important;
-  }
-  .w3-code {
-    width: auto;
-    background-color: #fff;
-    padding: 8px 12px;
-    border-left: 4px solid #4caf50;
-    word-wrap: break-word;
-  }
-  .w3-teal,
-  .w3-hover-teal:hover {
-    color: #fff !important;
-    background-color: #009688 !important;
-  }
-  .w3-container,
-  .w3-panel {
-    padding: 0.01em 16px;
-  }
-  .w3-panel {
-    margin-top: 16px;
-    margin-bottom: 16px;
-  }
-  .w3-xlarge{font-size:24px!important}.w3-xxlarge{font-size:36px!important}.w3-xxxlarge{font-size:48px!important}.w3-jumbo{font-size:64px!important}
+}
+.w3-bar-block .w3-dropdown-hover,
+.w3-bar-block .w3-dropdown-click {
+  width: 100%;
+}
+.w3-bar-block .w3-dropdown-hover .w3-dropdown-content,
+.w3-bar-block .w3-dropdown-click .w3-dropdown-content {
+  min-width: 100%;
+}
+.w3-bar-block .w3-dropdown-hover .w3-button,
+.w3-bar-block .w3-dropdown-click .w3-button {
+  width: 100%;
+  text-align: left;
+  padding: 8px 16px;
+}
+.w3-bar-block .w3-bar-item {
+  width: 100%;
+  display: block;
+  padding: 8px 16px;
+  text-align: left;
+  border: none;
+  white-space: normal;
+  float: none;
+  outline: 0;
+}
+.w3-bar-block.w3-center .w3-bar-item {
+  text-align: center;
+}
+.w3-block {
+  display: block;
+  width: 100%;
+}
+.w3-border-left {
+  border-left: 1px solid #ccc !important;
+}
+.w3-border-right {
+  border-right: 1px solid #ccc !important;
+}
+.w3-bar .w3-bar-item {
+  padding: 8px 16px;
+  float: left;
+  width: auto;
+  border: none;
+  display: block;
+  outline: 0;
+}
+.w3-bar-block .w3-bar-item {
+  width: 100%;
+  display: block;
+  padding: 8px 16px;
+  text-align: left;
+  border: none;
+  white-space: normal;
+  float: none;
+  outline: 0;
+}
+.w3-bar-block.w3-center .w3-bar-item {
+  text-align: center;
+}
+.w3-block {
+  display: block;
+  width: 100%;
+}
+.w3-hide-small {
+  display: none !important;
+}
+.w3-mobile {
+  display: block;
+  width: 100% !important;
+}
+.w3-bar-item.w3-mobile,
+.w3-dropdown-hover.w3-mobile,
+.w3-dropdown-click.w3-mobile {
+  text-align: center;
+}
+.w3-tiny {
+  font-size: 10px !important;
+}
+.w3-small {
+  font-size: 12px !important;
+}
+.w3-medium {
+  font-size: 15px !important;
+}
+.w3-large {
+  font-size: 18px !important;
+}
+.w3-btn,
+.w3-button {
+  border: none;
+  display: inline-block;
+  padding: 8px 16px;
+  vertical-align: middle;
+  overflow: hidden;
+  text-decoration: none;
+  color: inherit;
+  background-color: inherit;
+  text-align: center;
+  cursor: pointer;
+  white-space: nowrap;
+}
+.w3-btn,
+.w3-button {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+.w3-disabled,
+.w3-btn:disabled,
+.w3-button:disabled {
+  cursor: not-allowed;
+  opacity: 0.3;
+}
+.w3-disabled *,
+:disabled * {
+  pointer-events: none;
+}
+.w3-dropdown-hover:hover > .w3-button:first-child,
+.w3-dropdown-click:hover > .w3-button:first-child {
+  background-color: #ccc;
+  color: #000;
+}
+.w3-bar-block .w3-dropdown-hover .w3-button,
+.w3-bar-block .w3-dropdown-click .w3-button {
+  width: 100%;
+  text-align: left;
+  padding: 8px 16px;
+}
+.w3-bar .w3-button {
+  white-space: normal;
+}
+.w3-dropdown-hover.w3-mobile,
+.w3-dropdown-hover.w3-mobile .w3-btn,
+.w3-dropdown-hover.w3-mobile .w3-button,
+.w3-dropdown-click.w3-mobile,
+.w3-dropdown-click.w3-mobile .w3-btn,
+.w3-dropdown-click.w3-mobile .w3-button {
+  width: 100%;
+}
+.w3-button:hover {
+  color: #000 !important;
+  background-color: #ccc !important;
+}
+.w3-code {
+  width: auto;
+  background-color: #fff;
+  padding: 8px 12px;
+  border-left: 4px solid #4caf50;
+  word-wrap: break-word;
+}
+.w3-teal,
+.w3-hover-teal:hover {
+  color: #fff !important;
+  background-color: #009688 !important;
+}
+.w3-container,
+.w3-panel {
+  padding: 0.01em 16px;
+}
+.w3-panel {
+  margin-top: 16px;
+  margin-bottom: 16px;
+}
+.w3-xlarge {
+  font-size: 24px !important;
+}
+.w3-xxlarge {
+  font-size: 36px !important;
+}
+.w3-xxxlarge {
+  font-size: 48px !important;
+}
+.w3-jumbo {
+  font-size: 64px !important;
+}
